# vowpal_wabbit

./: .clang-format  .clang-tidy  .clang-tidy-ci  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  COPYING  Dockerfile  Doxyfile  INSTALL  INSTALL.osx  LICENSE  License.txt  License_stack.txt  MANIFEST.in  Makefile  Makefile.alt  Makefile.am  Makefile.aws  Makefile.in  README  README.Windows.md  README.deploy.txt  README.hal3  README.md  README.windows.txt  README_cluster  READ_ME_TXM.txt  ThirdPartyNotices.txt  (+158 more)
allreduce/: CMakeLists.txt
bindings/c/: CMakeLists.txt
cluster/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README_cluster  allreduce_master.cc  cluster.vcxproj  cluster.vcxproj.filters  mapscript-yarn.sh  mapscript.sh  readme.md  runvw-yarn.sh  runvw.sh  single_machine  spanning_tree.cc  spanning_tree_main.cc  spanning_tree_static.vcxproj  spanning_tree_static.vcxproj.filters
cluster/spark/: VwSparkCluster.scala
common/: CMakeLists.txt
common/test/: hash_test.cc  rand_test.cc
cs/: CMakeLists.txt  CreateNuGet.cmd  Directory.Build.props  Extensions.cs  IActionDependentFeatures.cs  IVowpalWabbitExample.cs  Microsoft.Research.VowpalWabbit.nuspec  ObjectFactory.cs  ObjectPool.cs  PooledObject.cs  README.md  SharedExample.cs  VowpalWabbit.cs  VowpalWabbitAsync.cs  VowpalWabbitDynamic.cs  VowpalWabbitExample.cs  VowpalWabbitFactory.cs  VowpalWabbitFactoryBase.cs  VowpalWabbitManager.cs  VowpalWabbitModel.cs  VowpalWabbitMultiLine.cs  VowpalWabbitNative.cs  VowpalWabbitPool.cs  VowpalWabbitSweep.cs  VowpalWabbitThreadedLearning.cs  VowpalWabbitThreadedPrediction.cs  VowpalWabbitThreadedPredictionBase.cs  cs.csproj  cs.nuspec  cs.nuspec~  packages.config  transform_all.bat  version.props  version.targets  vw_key.snk
cs/cli/: Resource.rc  (+39 more)
decision_service/: CMakeLists.txt  ds.sln  ds_action_probabilities.cc  ds_api.cc  ds_api.h  ds_api.i  ds_api_csharp.i  ds_api_java.i  ds_api_python.i  ds_client.cc  ds_config.cc  ds_explore.cc  ds_explore.h  ds_explore_bag.cc  ds_explore_cover.cc  ds_explore_epsilon.cc  ds_explore_softmax.cc  ds_internal.cc  ds_internal.h  ds_predictor_container.cc  ds_predictor_container.h  ds_predictors.cc  ds_predictors.h  ds_rank_response.cc  ds_vw.cc  ds_vw.h  event_hub_client.cc  event_hub_client.h  rl.sln
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  header.html
explore/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  ReadMe.txt  build_python_wheels_windows.yml  exploration.h  explore.cpp  explore.h  explore.sln  explore.vcxproj  explore.vcxproj.filters  explore_internal.h  explore_sample.cpp  future_compat.h  hash.h  mwt.chm  sample.cpp  sampling.h  sampling_internal.h  stdafx.cpp  stdafx.h  temp.cc  vw_explore.vcxproj
ext_libs/: CMakeLists.txt  README  ext_libs.cmake  zlib.cmake  zlib_fdopen_macos.patch
java/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  pom.xml  pom.xml.in  settings.xml
python/: CMakeLists.txt  Learning_to_Search.ipynb  MANIFEST.in  Makefile  Makefile-original  Makefile.am  Makefile.in  PACKAGE.rst  README.rst  VW_in_Python.ipynb  boost_python_make_instance.patch  conda_install.sh  covington.py  default_vcpkg.json  mini_vw.py  packages.config  poisson_regression.ipynb  pylibvw.cc  pyreduction.cc  python.vcxproj  python.vcxproj.filters  python_reduction.cc  pyvw.py  requirements.txt  setup.py  setup.py.in  setup_boost_python.sh  sklearn_vw.ipynb  sklearn_vw.py  test.py  test_partial_example.py  test_search.py  test_search_ldf.py  test_sklearn_vw.py  tox.ini  vcpkg_default.json  vcpkg_python310.json  vcpkg_python37.json  vcpkg_python38.json  vcpkg_python39.json  (+3 more)
spark/: CMakeLists.txt  pom.xml.in
src/: Makefile  Makefile.am  Makefile.in  bfgs.h  config.h  config.h.in  gd_mf.cc  loss_functions.h  main.cc  parse_regressor.h  v_array.h
test/: 0002.autolink.stderr  0002.stderr  0002a.stderr  0002b.stderr  0002c.stderr  0097.audit_regr  157.stderr  CMakeLists.txt  Makefile  README  README.md  RunTests  RunTests_to_fb  Tests.sh  active-simulation.t24.stderr  active_test.py  argmax_data.stderr  bfgs.m  big-constant.stderr  bs.prreg.stderr  bs.reg.stderr  cb_dm.reg  cbify-reg-cats.stderr  cbify_reg_discrete_cats.stderr  ccb_reuse_small.stderr  chopped_rcv1_cb_small.vw  cluster.stderr  cluster.stdout  cluster_test.py  confidence_after_training.preds  confidence_after_training.stderr  core.vwtest.json  cubic-test.sh  daemon-test.sh  empty_test.sh  final.model  fix_cbtest_feature_count.patch  ftrl.audit_regr  hash_seed5.model  holdout-loss-not-zero.stderr  (+57 more)
test_extension/: CMakeLists.txt  boost_module.cc  setup.py  simple_module.c  test_build.sh  test_vw_module.cmake  test_wheel.sh  vw_test_module.cc
vowpalwabbit/: ,.json  .runsettings  Build.props  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Makefile.am  Makefile.in  NuGet.Config  OjaNewton.cc  OjaNewton.h  Performance1.psess  RPNewton.cc  RPNewton.h  VowpalWabbitConfig.cmake  VowpalWabbitConfigVersion.cmake  accumulate.cc  accumulate.h  action_score.cc  action_score.h  active.cc  active.h  active_cover.cc  active_cover.h  active_interactor.cc  active_multiclass_prediction.h  ae.cc  ae.h  allreduce.cc  allreduce.h  allreduce_sockets.cc  allreduce_threads.cc  api_status.cc  api_status.h  arguments.cc  arguments.h  arguments_boost_po.cc  arguments_boost_po.h  arguments_serializer_boost_po.cc  (+524 more)
vowpalwabbitslim/: CMakeLists.txt  Makefile  Makefile.am  example_predict.cc  model_parser.cc  model_parser.h  ut_explore.cpp  ut_opts.cpp  ut_vw.cpp  vw_slim.vcxproj.filters  vw_slim_predict.cc  vw_slim_predict.h  vw_slim_return_codes.h  vw_util.cpp
vw_slim_predict/: Makefile  Makefile.am  main_predict.cc  vw_predict.cc  vw_predict.h  vw_slim_predict.cc  vw_slim_predict.h
wasm/: .npmignore  CMakeLists.txt  README.md  developer_readme.md  documentation.md  example.js  package-lock.json  package.json  readme.md  tsconfig.json  vw.js  vw.ts  wasm_wrapper.cc
(+5108 files in other folders)
